2013-06-25  Roland Levillain  <roland@lrde.epita.fr>

	Restrict workaround-related locale changes to LC_NUMERIC.

	* scribo/text/recognition.hh: Here.

2013-06-25  Roland Levillain  <roland@lrde.epita.fr>

	More locale-related Tesseract workarounds.

	* scribo/text/recognition.hh: Here.

2013-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Provide default arguments in function declarations only.

	* scribo/core/line_info.hh (scribo::line_info<L>::update_text)
	* scribo/text/recognition.hh (scribo::text::recognition):
	Here.

2013-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Disable unused arguments.

	* scribo/binarization/internal/local_threshold_core.hh
	(scribo::binarization::internal::impl::generic::local_threshold_core)
	* scribo/core/internal/doc_serializer.hh
	(scribo::doc_serializer<E>::visit)
	* scribo/filter/internal/component_aligned.hh
	(scribo::filter::internal::component_aligned)
	* scribo/filter/internal/compute.hh
	(scribo::filter::internal::compute)
	* scribo/primitive/link/internal/link_functor_base.hh
	(internal::link_functor_base<L,E>::start_processing_object_)
	* scribo/util/init_integral_image.hh
	(scribo::util::impl::generic::init_integral_image):
	Here.

2013-06-14  Roland Levillain  <roland@lrde.epita.fr>

	Shell-related portability fixes in Scribo's Makefiles.

	* doc/Makefile.am: Rewrite patterns ``perl X `find Y''' as
	``find Y -exec perl X {} \;'' to avoid long `perl' command lines and
	please the shell.
	Wrap some long lines.

2013-06-17  Roland Levillain  <roland@lrde.epita.fr>

	Use `perl -pi' instead of `sed -i' in Scribo.

	* doc/Makefile.am,
	* doc/tools/todoxygen.sh:
	Here, as `sed -i' (with no backup file) behaves differently on
	GNU/Linux and Mac OS X.  For more information, see:
	http://stackoverflow.com/questions/5694228/.

2013-04-26  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/binarization/sauvola_ms_split.hh: Make use of all arguments.

2013-04-25  Guillaume Lazzara  <z@lrde.epita.fr>
